# COMPSCI760_LOGREG

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  ver.h.in
src/in/: CMakeLists.txt
src/inc/: CMakeLists.txt  sample.h.in
src/readdata/: CMakeLists.txt  readdata.cpp  readdata.h
src/trainmodel/: CMakeLists.txt  trainmodel.cpp  trainmodel.h
